Updated personal projects page

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5318,6 +5318,277 @@ body {
 .cid-rrPs3EbOXt .dropdown-item:hover {
   color: #232323 !important;
 }
+.cid-rtKw42l06w {
+  padding-top: 120px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/adobestock-162210458-converted-2000x2132.png");
+}
+.cid-rtKw5bmCsG {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rtKw5bmCsG h3 {
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rtKw5bmCsG .progress {
+  width: 100%;
+}
+.cid-rtKw5bmCsG .title-wrap {
+  display: flex;
+  justify-content: space-between;
+  -webkit-justify-content: space-between;
+}
+.cid-rtKw5bmCsG progress {
+  height: 8px;
+}
+.cid-rtKw5bmCsG .progressbar-number {
+  display: inline-block;
+}
+.cid-rtKw5bmCsG .progress-primary {
+  background: rgba(206, 206, 206, 0.4);
+  border: none;
+  outline: none;
+}
+.cid-rtKw5bmCsG .progress-primary::-webkit-progress-bar {
+  background: rgba(206, 206, 206, 0.4);
+}
+.cid-rtKw5bmCsG .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rtKw5bmCsG .section-content-title {
+  font-weight: 500;
+}
+.cid-rtKw5bmCsG .progress_value {
+  position: relative;
+}
+.cid-rtKw5bmCsG .progress1 .progressbar-number:before,
+.cid-rtKw5bmCsG .progress2 .progressbar-number:before,
+.cid-rtKw5bmCsG .progress3 .progressbar-number:before,
+.cid-rtKw5bmCsG .progress4 .progressbar-number:before,
+.cid-rtKw5bmCsG .progress5 .progressbar-number:before {
+  position: absolute;
+  right: 15px;
+  top: 0;
+}
+.cid-rtKw5bmCsG progress[value]::-webkit-progress-bar {
+  background: rgba(206, 206, 206, 0.4);
+}
+.cid-rtKw5bmCsG progress::-webkit-progress-value {
+  background: #e77218;
+}
+.cid-rtKw5bmCsG progress[value]::-moz-progress-bar {
+  background: #e77218;
+}
+.cid-rtKw5bmCsG progress::-ms-fill {
+  background: #e77218;
+}
+.cid-rtKw5bmCsG .progress1 .progressbar-number:before {
+  content: '100';
+}
+.cid-rtKw5bmCsG .progress2 .progressbar-number:before {
+  content: '90';
+}
+.cid-rtKw5bmCsG .progress3 .progressbar-number:before {
+  content: '80';
+}
+.cid-rtKw5bmCsG .progress4 .progressbar-number:before {
+  content: '70';
+}
+.cid-rtKw5bmCsG .progress5 .progressbar-number:before {
+  content: '60';
+}
+@media (min-width: 768px) {
+  .cid-rtKw5bmCsG .text-elements {
+    padding-right: 3rem;
+  }
+  .cid-rtKw5bmCsG .progress_elements {
+    padding-left: 3rem;
+  }
+}
+.cid-rtKw92YpaC {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background: linear-gradient(45deg, #000000, #e77218);
+}
+.cid-rtKw92YpaC .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-rtKw92YpaC H2 {
+  text-align: left;
+}
+.cid-rtKwaySRMe {
+  padding-top: 30px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-rtKwaySRMe .counter-container {
+  color: #767676;
+}
+.cid-rtKwaySRMe .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-rtKwaySRMe .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rtKwaySRMe .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-rtKwaySRMe .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #e77218;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.cid-rtKwdBu2bK {
+  padding-top: 45px;
+  padding-bottom: 15px;
+  background-color: #e77218;
+}
+.cid-rtKwdBu2bK .mbr-section-subtitle {
+  color: #ffffff;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rtKwdBu2bK .timeline-text-content {
+  padding: 2rem 2.5rem;
+  background: #ffffff;
+  margin-right: 2rem;
+  transition: all .4s;
+}
+.cid-rtKwdBu2bK .timeline-text-content p {
+  margin-bottom: 0;
+}
+.cid-rtKwdBu2bK .timeline-element {
+  margin-bottom: 50px;
+  position: relative;
+  word-wrap: break-word;
+  word-break: break-word;
+  display: -webkit-flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+}
+.cid-rtKwdBu2bK .timeline-element:hover .timeline-text-content {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-rtKwdBu2bK .reverse {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+.cid-rtKwdBu2bK .reverse .timeline-text-content {
+  margin-left: 2rem;
+  margin-right: 0;
+}
+.cid-rtKwdBu2bK .iconsBackground {
+  position: absolute;
+  left: 50%;
+  width: 60px;
+  height: 60px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: #ffffff;
+  top: 20px;
+  margin-left: -30px;
+}
+.cid-rtKwdBu2bK .mbr-iconfont {
+  position: absolute;
+  text-align: center;
+  font-size: 35px;
+  display: inline-block;
+  z-index: 3;
+  top: 13px;
+  left: 13px;
+}
+.cid-rtKwdBu2bK .separline:before {
+  top: 20px;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  width: 2px;
+  background-color: #ffffff;
+  left: calc(50% - 1px);
+  height: calc(100% + 4rem);
+}
+@media (max-width: 768px) {
+  .cid-rtKwdBu2bK .iconsBackground {
+    left: 1.5rem;
+  }
+  .cid-rtKwdBu2bK .separline:before {
+    left: calc(1.5rem - 1px);
+  }
+  .cid-rtKwdBu2bK .timeline-text-content {
+    margin-left: 3rem !important;
+    margin-right: 0 !important;
+  }
+  .cid-rtKwdBu2bK .reverse .timeline-text-content {
+    margin-right: 0 !important;
+  }
+}
+.cid-rtKwdBu2bK .reverseTimeline {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.cid-rtL5Tl4ntw {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rtL5Tl4ntw P {
+  color: #767676;
+}
+.cid-rtL5v5x1Uu {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-rtL5v5x1Uu .counter-container {
+  color: #767676;
+}
+.cid-rtL5v5x1Uu .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-rtL5v5x1Uu .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rtL5v5x1Uu .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-rtL5v5x1Uu .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #e77218;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
 .cid-rtCHozareE {
   padding-top: 60px;
   padding-bottom: 60px;
