--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,9 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap);
-
-
-
-
-
 body {
   font-family: Rubik;
 }
@@ -573,32 +567,6 @@ blockquote {
 .mbr-form .input-group-btn button[type="submit"]:hover {
   box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
 }
-.form2 .form-control {
-  border-top-left-radius: 100px;
-  border-bottom-left-radius: 100px;
-}
-.form2 .input-group-btn a.btn {
-  border-top-left-radius: 0 !important;
-  border-bottom-left-radius: 0 !important;
-}
-.form2 .input-group-btn button[type="submit"] {
-  border-top-left-radius: 0 !important;
-  border-bottom-left-radius: 0 !important;
-}
-.form3 input[type="email"] {
-  border-radius: 100px !important;
-}
-@media (max-width: 349px) {
-  .form2 input[type="email"] {
-    border-radius: 100px !important;
-  }
-  .form2 .input-group-btn a.btn {
-    border-radius: 100px !important;
-  }
-  .form2 .input-group-btn button[type="submit"] {
-    border-radius: 100px !important;
-  }
-}
 @media (max-width: 767px) {
   .btn {
     font-size: .75rem !important;
@@ -688,7 +656,8 @@ blockquote {
 .lazy-bg {
   background-image: none !important;
 }
-.lazy-placeholder:not(section) {
+.lazy-placeholder:not(section),
+.lazy-none {
   display: block;
   position: relative;
   padding-bottom: 56.25%;
@@ -1139,7 +1108,7 @@ section.lazy-placeholder:after {
 }
 .cid-qTkAaeaxX5 {
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 120px;
   background-image: url("../../../assets/images/funmi-207-1336x2000.jpg");
 }
 @media (max-width: 767px) {
@@ -1208,6 +1177,50 @@ section.lazy-placeholder:after {
   padding-top: 135px;
   padding-bottom: 45px;
   background-image: url("../../../assets/images/allobjects-556x378.png");
+}
+.cid-tkQXK160XH {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #e4edef;
+}
+.cid-tkQXK160XH .card-box {
+  padding: 0 2rem;
+}
+.cid-tkQXK160XH .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-tkQXK160XH .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-tkQXK160XH h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-tkQXK160XH p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-tkQXK160XH .mbr-text {
+  color: #767676;
+  text-align: center;
+}
+.cid-tkQXK160XH .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-tkQXK160XH .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-tkQXK160XH .card-title {
+  text-align: center;
 }
 .cid-rrPrYeoHvX .navbar {
   padding: .5rem 0;
@@ -1593,7 +1606,7 @@ section.lazy-placeholder:after {
 .cid-rsoxsdfDbF {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #c7f2fc;
+  background-color: #d9eaed;
 }
 .cid-rsoxsdfDbF .card-box {
   padding: 0 2rem;
@@ -1659,6 +1672,248 @@ section.lazy-placeholder:after {
   .cid-rsqjzLvcgl .inner-container {
     width: 100% !important;
   }
+}
+.cid-tkRhutnGX0 {
+  padding-top: 60px;
+  padding-bottom: 30px;
+  background-color: #0f7699;
+}
+.cid-tkRhutnGX0 P {
+  color: #767676;
+}
+.cid-tkRhutnGX0 H1 {
+  color: #ffffff;
+}
+.cid-tkRhutnGX0 .mbr-text,
+.cid-tkRhutnGX0 .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-tkRhutnGX0 H3 {
+  color: #ffffff;
+}
+.cid-tkRiN7Um5C {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-tkRiN7Um5C h3 {
+  text-align: center;
+  font-weight: 300;
+}
+.cid-tkRiN7Um5C .progress {
+  width: 100%;
+}
+.cid-tkRiN7Um5C .title-wrap {
+  display: flex;
+  justify-content: space-between;
+  -webkit-justify-content: space-between;
+}
+.cid-tkRiN7Um5C progress {
+  height: 8px;
+}
+.cid-tkRiN7Um5C .progressbar-number {
+  display: inline-block;
+  word-break: normal;
+}
+.cid-tkRiN7Um5C .progress-primary {
+  background: rgba(206, 206, 206, 0.4);
+  border: none;
+  outline: none;
+}
+.cid-tkRiN7Um5C .progress-primary::-webkit-progress-bar {
+  background: rgba(206, 206, 206, 0.4);
+}
+.cid-tkRiN7Um5C .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-tkRiN7Um5C .section-content-title {
+  font-weight: 500;
+}
+.cid-tkRiN7Um5C .progress_value {
+  position: relative;
+}
+.cid-tkRiN7Um5C .progress1 .progressbar-number:before,
+.cid-tkRiN7Um5C .progress2 .progressbar-number:before,
+.cid-tkRiN7Um5C .progress3 .progressbar-number:before,
+.cid-tkRiN7Um5C .progress4 .progressbar-number:before,
+.cid-tkRiN7Um5C .progress5 .progressbar-number:before {
+  position: absolute;
+  right: 15px;
+  top: 0;
+}
+.cid-tkRiN7Um5C progress[value]::-webkit-progress-bar {
+  background: rgba(206, 206, 206, 0.4);
+}
+.cid-tkRiN7Um5C progress::-webkit-progress-value {
+  background: #33aad3;
+}
+.cid-tkRiN7Um5C progress[value]::-moz-progress-bar {
+  background: #33aad3;
+}
+.cid-tkRiN7Um5C progress::-ms-fill {
+  background: #33aad3;
+}
+.cid-tkRiN7Um5C .progress1 .progressbar-number:before {
+  content: '100';
+}
+.cid-tkRiN7Um5C .progress2 .progressbar-number:before {
+  content: '90';
+}
+.cid-tkRiN7Um5C .progress3 .progressbar-number:before {
+  content: '80';
+}
+.cid-tkRiN7Um5C .progress4 .progressbar-number:before {
+  content: '70';
+}
+.cid-tkRiN7Um5C .progress5 .progressbar-number:before {
+  content: '60';
+}
+@media (min-width: 768px) {
+  .cid-tkRiN7Um5C .text-elements {
+    padding-right: 3rem;
+  }
+  .cid-tkRiN7Um5C .progress_elements {
+    padding-left: 3rem;
+  }
+}
+.cid-tkRjl6yCle {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background: linear-gradient(45deg, #1a1818, #33aad3);
+}
+.cid-tkRjl6yCle .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-tkRjl6yCle H2 {
+  text-align: left;
+}
+.cid-tkRjIQE43P {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-tkRjIQE43P .counter-container {
+  color: #767676;
+}
+.cid-tkRjIQE43P .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-tkRjIQE43P .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-tkRjIQE43P .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+  position: relative;
+}
+.cid-tkRjIQE43P .counter-container ol li:before {
+  position: absolute;
+  left: -56px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #33aad3;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.cid-tkRjSOcMSG {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-tkRjSOcMSG .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-tkRjSOcMSG .timeline-text-content {
+  padding: 2rem 2.5rem;
+  background: #6bc7e6;
+  margin-right: 2rem;
+  transition: all .4s;
+}
+.cid-tkRjSOcMSG .timeline-text-content p {
+  margin-bottom: 0;
+}
+.cid-tkRjSOcMSG .timeline-element {
+  margin-bottom: 50px;
+  position: relative;
+  word-wrap: break-word;
+  word-break: break-word;
+  display: -webkit-flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+}
+.cid-tkRjSOcMSG .timeline-element:hover .timeline-text-content {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-tkRjSOcMSG .reverse {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+.cid-tkRjSOcMSG .reverse .timeline-text-content {
+  margin-left: 2rem;
+  margin-right: 0;
+}
+.cid-tkRjSOcMSG .iconsBackground {
+  position: absolute;
+  left: 50%;
+  width: 60px;
+  height: 60px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: #6bc7e6;
+  top: 20px;
+  margin-left: -30px;
+}
+.cid-tkRjSOcMSG .mbr-iconfont {
+  position: absolute;
+  text-align: center;
+  font-size: 35px;
+  display: inline-block;
+  z-index: 3;
+  top: 13px;
+  left: 13px;
+}
+.cid-tkRjSOcMSG .separline:before {
+  top: 20px;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  width: 2px;
+  background-color: #6bc7e6;
+  left: calc(50% - 1px);
+  height: calc(100% + 4rem);
+}
+@media (max-width: 768px) {
+  .cid-tkRjSOcMSG .iconsBackground {
+    left: 1.5rem;
+  }
+  .cid-tkRjSOcMSG .separline:before {
+    left: calc(1.5rem - 1px);
+  }
+  .cid-tkRjSOcMSG .timeline-text-content {
+    margin-left: 3rem !important;
+    margin-right: 0 !important;
+  }
+  .cid-tkRjSOcMSG .reverse .timeline-text-content {
+    margin-right: 0 !important;
+  }
+}
+.cid-tkRjSOcMSG .reverseTimeline {
+  display: flex;
+  flex-direction: column-reverse;
 }
 .cid-rsqlQ5hSwK {
   padding-top: 60px;
@@ -3266,6 +3521,9 @@ section.lazy-placeholder:after {
     justify-content: center;
     -webkit-justify-content: center;
   }
+}
+.cid-rtCH4UxPMn P {
+  color: #ffffff;
 }
 .cid-rrPs0iKwRT .navbar {
   padding: .5rem 0;
